# vivar-engine-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  app.py  backend_interface.py  build_pqc.sh  engine_core.py  gui_demo.py  requirements.txt  setup_env.py  test_engine.py  vivar-engie-2.py  vivar_engine.h  vivar_engine.py  vivar_sdk.py  wrapper.py
core/: lib.rs
examples/python/: test_vivar.py
sdk/: client.py  main.py  stegano_handler.py  test_engie.py
src/: lib.rs  vivar_kernel.rs
web/: app.py
web/templates/: index.html
workflow/: build.yml
