[package]
name = "vivar-engine"
version = "0.1.0"
edition = "2021"

# Configuración de compilación: Soporta tanto librerías dinámicas como WebAssembly
[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3          # Máxima optimización para bucles ARX
lto = "fat"            # LTO extremo para máxima velocidad de ejecución
codegen-units = 1      # Unificación total del binario
panic = "abort"        # Seguridad extrema: no revela trazas de memoria al fallar
strip = true           # Binario compacto y sin símbolos (anti-ingeniería inversa)

[dependencies]
# Criptografía y Seguridad
zeroize = { version = "1.8", features = ["derive"] }
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"         # Crucial para evitar ataques de canal lateral (Timing Attacks)

# Soporte WebAssembly para la arquitectura Zero-Knowledge
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
# Permite cambiar entre modo servidor (nativo) y modo cliente (wasm)
default = []
wasm = ["dep:wasm-bindgen"]
