[package]
name = "vivar-engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# IMPORTANTE: Desactivar strip para que ctypes pueda ver tus funciones exportadas
strip = false

[dependencies]
# Dependencias base
zeroize = { version = "1.8", features = ["derive"] }
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"

# Dependencia WASM declarada como opcional
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
